[9.0][ADD] account_invoice_fixed_discount

--- a/account_invoice_fixed_discount/reports/report_account_invoice.xml
+++ b/account_invoice_fixed_discount/reports/report_account_invoice.xml
@@ -1,32 +1,27 @@
-<!-- Copyright 2017 ForgeFlow S.L.
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright 2017 Eficent Business and IT Consulting Services S.L.
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
-    <template id="report_invoice_document" inherit_id="account.report_invoice_document">
+
+    <template id="report_invoice_document"
+              inherit_id="account.report_invoice_document">
+
         <xpath expr="//t[@t-set='display_discount']" position="after">
-            <t
-                t-set="display_discount_fixed"
-                t-value="any([l.discount_fixed for l in o.invoice_line_ids])"
-            />
-        </xpath>
-        <xpath expr="//th[@name='th_discount']/span" position="attributes">
-            <attribute name="t-if">not display_discount_fixed</attribute>
+            <t t-set="display_discount_fixed"
+               t-value="any([l.discount_fixed for l in o.invoice_line_ids])"/>
         </xpath>
 
-        <xpath expr="//th[@t-if='display_discount']/span" position="before">
-            <t t-if="display_discount_fixed">
-                <span>Discount Amount (%)</span>
-            </t>
+        <xpath expr="//th[@t-if='display_discount']" position="after">
+            <th t-if="display_discount_fixed" class="text-right"
+                groups="sale.group_discount_per_so_line">Disc. Fixed Amount</th>
         </xpath>
 
-        <span t-field="line.discount" position="before">
-            <t t-if="display_discount_fixed">
-                <span class="text-nowrap" t-field="line.discount_fixed" /><span
-                    class="text-nowrap"
-                > (or</span>
-            </t>
-        </span>
-        <span t-field="line.discount" position="after">
-            <t t-if="display_discount_fixed"><span class="text-nowrap"> %)</span></t>
-        </span>
+        <xpath expr="//td[@t-if='display_discount']" position="after">
+            <td t-if="display_discount_fixed" class="text-right" groups="sale.group_discount_per_so_line">
+                <span t-field="l.discount_fixed"/>
+            </td>
+        </xpath>
+
     </template>
+
 </odoo>
