--- a/account_invoice_transmit_method/views/res_partner.xml
+++ b/account_invoice_transmit_method/views/res_partner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!--
-    Copyright 2017-2022 Akretion France (http://www.akretion.com/)
+    Copyright 2017-2020 Akretion France (http://www.akretion.com/)
     @author: Alexis de Lattre <alexis.delattre@akretion.com>
-    Copyright 2021-2022 Camptocamp SA (https://www.camptocamp.com).
+    Copyright 2021 Camptocamp SA (https://www.camptocamp.com).
     @author: Iván Todorovich <ivan.todorovich@camptocamp.com>
     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl).
 -->
@@ -38,9 +38,14 @@
                 expr="//field[@name='child_ids']/form//field[@name='email']"
                 position="attributes"
             >
-                <attribute
-                    name="required"
-                >customer_invoice_transmit_method_code == 'mail' and type == 'invoice'</attribute>
+                <attribute name="attrs" operation="update">
+                    {
+                        'required': [
+                            ('customer_invoice_transmit_method_code', '=', 'mail'),
+                            ('type', '=', 'invoice'),
+                        ],
+                    }
+                </attribute>
             </xpath>
         </field>
     </record>
