[ADD] account_invoice_crm_tag: CRM tags on invoices
TT44457

Co-Authored-By: Pedro M. Baeza <pedro.baeza@tecnativa.com>

--- a/account_invoice_crm_tag/views/account_invoice_views.xml
+++ b/account_invoice_crm_tag/views/account_invoice_views.xml
@@ -11,8 +11,7 @@
                 <field
                     name="crm_tag_ids"
                     widget="many2many_tags"
-                    invisible="move_type not in ['out_invoice','out_refund']"
-                    options="{'color_field': 'color', 'no_create_edit': True}"
+                    attrs="{'invisible': [('move_type', 'not in', ['out_invoice','out_refund'])]}"
                 />
             </xpath>
         </field>
